Search based on pincode and added minimum age limit constrain to 18 years

--- a/prop.properties
+++ b/prop.properties
@@ -1,16 +1,16 @@
 #Change the values for all the properties.
 [cowin]
-district_id = 296
+pincode = 456001
 #Start date for searching. Can be a valid date from next day.
 date = 30-04-2021
 
 [sinch]
 #registered mobile number at sinch
-to_number = 91098765433
+to_number = #
 #values to be obtained from sinch after signup(Please refer attached screenshot)
-from_number = 447537454776502
-sinch_service_plan_id = 10880ff2592f45429da7d91b7d408bb3
-sinch_api_token = 32d7331eca46473387bd11498441df4b
+from_number = #
+sinch_service_plan_id = #
+sinch_api_token = #
 #custom message 
-message_body = Vaccination center available!!
+message_body = #
 
