--- a/prop.properties
+++ b/prop.properties
@@ -5,8 +5,11 @@ district_id = 296
 date = 30-04-2021
 
 [sinch]
-from_number = 447537454502
+#values to be obtained from sinch after signup
+from_number = 447537454776502
 to_number = 917736651908
-message_body = Vaccination center available!!
 sinch_service_plan_id = 10880ff2592f45429da7d91b7d408bb3
 sinch_api_token = 32d7331eca46473387bd11498441df4b
+#custom message 
+message_body = Vaccination center available!!
+
