--- a/prop.properties
+++ b/prop.properties
@@ -5,9 +5,10 @@ district_id = 296
 date = 30-04-2021
 
 [sinch]
-#values to be obtained from sinch after signup
+#registered mobile number at sinch
+to_number = 91098765433
+#values to be obtained from sinch after signup(Please refer attached screenshot)
 from_number = 447537454776502
-to_number = 917736651908
 sinch_service_plan_id = 10880ff2592f45429da7d91b7d408bb3
 sinch_api_token = 32d7331eca46473387bd11498441df4b
 #custom message 
